# de_zoomcamp_2023_project

./: .env.sample  README.md  pyproject.toml  setup.cfg
data_ingestion/: README.MD  flow.py  flow_events.py  flow_locales.py  flow_optimization.py  flow_orgs.py  load_orgs_flow.py  make_deployments.py  utils.py
data_ingestion/services/: DataLoader.py  DataSaver.py  ProCultureAPI.py  big_query.py  prefect_tasks.py  utils.py
dbt/cultura_ru/: dbt_project.yml
dbt_project/: README.md  dbt_project.yml
dbt_project/models/: dim_locations.sql  dim_organizations.sql  fct_events.sql  lnk_event_locales.sql  schema.yml
dbt_project/tests/: assert_all_locales_loaded.sql  assert_event_period_is_acceptable.sql
src/data_ingestion/: data_loader.py
src/data_ingestion/services/: DataExtractor.py  DataSaver.py  ProCultureAPI.py  utils.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
