[tool.poetry]
name = "de-zoomcamp-2023-project"
version = "0.1.0"
description = "My data engineering project at DataTalks zoomcamp course (2023 cohort)"
authors = ["Roman Zabolotin <rzabolotin@gmail.com>"]
readme = "README.md"
packages = [{include = "de_zoomcamp_2023_project"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
loguru = "^0.6.0"
pytest = "^7.2.2"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "^1.1.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
