[tool.poetry]
name = "data_engineering_project"
version = "0.1.0"
description = "Data Engineering Project from the DE Zoomcamp course. This project is a simple ETL pipeline that extracts data from the web, transforms it and loads it into a database."
authors = ["Roman Zabolotin <rzabolotin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
loguru = "^0.6.0"
pytest = "^7.2.2"
prefect = "^2.9.0"
pyarrow = "^11.0.0"
prefect-gcp = {extras = ["cloud-storage"], version = "^0.3.0"}
google-cloud-bigquery = "^3.9.0"
prefect-github = "^0.1.5"
dbt-bigquery = "^1.4.3"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "^1.1.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
